# Telegram-CMS

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.python  README.md  alembic.ini  docker-compose.yml  install.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  auth.py  cli.py  deps.py  limiter.py  main.py  metrics.py  schemas.py
api/routers/: __init__.py  admins.py  ai_settings.py  audit.py  queue.py  source_channels.py  tags.py  templates.py  tenants.py
apigo/: Dockerfile  README.md  aiclient.go  auth_argon2.go  auth_jwt.go  auth_mw.go  auth_test.go  config.go  cors.go  dberr.go  enqueue.go  enqueue_test.go  go.mod  go.sum  handlers_admins.go  handlers_audit.go  handlers_auth.go  handlers_channels.go  handlers_meta.go  handlers_queue.go  handlers_tags.go  handlers_templates.go  handlers_tenants.go  httpx.go  main.go  metrics.go  models.go  patch.go  ratelimit.go  server.go  store.go
bot/: __init__.py  alerts.py  cards.py  client.py  draft.py  main.py  publisher.py
bot/handlers/: __init__.py  admin.py  callbacks.py
caddy/: Caddyfile
docs/: ARCHITECTURE.md  BOT_GUIDE.md  CONFIGURATION.md  FLEET_UPDATES.md  PROFILES.md  RUNBOOK.md
docs/api/: README.md  admins.md  audit.md  auth.md  queue.md  source-channels.md  (+2 more)
fleet/: auto-update.sh  fleet.conf.example  health-gate.sh  tg-cms-update.service  tg-cms-update.timer
migrations/: env.py
observability/: prometheus.yml
shared/: __init__.py  config.py  db.py  dedupe.py  enums.py  health.py  logging.py  models.py  normalize.py  security.py  tasks.py  tenant.py  transform.py
tests/: conftest.py  test_arq_json_serializer.py  test_bot_client_mode.py  test_dedupe.py  test_metrics.py  test_normalize_dedupe.py  test_tenancy.py  test_tenant_config.py  test_transform.py
userbot/: __init__.py  __main__.py  client.py  ingest.py  login.py  main.py
web/: Dockerfile  package-lock.json  package.json
worker/: __init__.py  __main__.py  main.py  normalize.py  reconcile.py
(+28 files in other folders)
